@@ -4,21 +4,13 @@ use warnings;
 use English qw(-no_match_vars);
 use Error::Pure::Utils qw(clean);
 use Tags::Output::Raw;
-use Test::More 'tests' => 6;
+use Test::More 'tests' => 5;
 use Test::NoWarnings;
 
 # Test.
 my $obj = Tags::Output::Raw->new(
 	'xml' => 1,
 );
-eval {
-	$obj->put(['b', 'ELEMENT']);
-};
-is($EVAL_ERROR, "In XML must be lowercase tag name.\n");
-clean();
-
-# Test.
-$obj->reset;
 eval {
 	$obj->put(['b', 'element'], ['b', 'element2'], ['e', 'element']);
 };
