@@ -1,4 +1,6 @@
 0.09
+ [Tags::Output::Raw]
+ - Fix issue with XML element in lowercase only.
 
 0.08 2020-04-26T16:04:35+02:00
  [Common]
